--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "eradiumlauncher",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "productName": "Eradium Launcher",
   "description": "Modded Minecraft Launcher",
-  "author": "Daniel Scalzi (https://github.com/dscalzi/)",
+  "author": "Eradium",
   "license": "UNLICENSED",
   "homepage": "https://github.com/DarkShoro/EradiumLauncher",
   "bugs": {
