Rechanged name in package.json
This avoid a issue i noticed.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eradiumlauncher",
-  "version": "0.0.4",
-  "productName": "Eradium-Launcher",
+  "version": "0.0.5",
+  "productName": "Eradium Launcher",
   "description": "Modded Minecraft Launcher",
   "author": "Eradium",
   "license": "UNLICENSED",
